; ModuleID = '/home/carl/AnghaBench/esp-idf/tools/kconfig/extr_gconf.c_place_node.c'
source_filename = "/home/carl/AnghaBench/esp-idf/tools/kconfig/extr_gconf.c_place_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.menu = type { i32 }

@parents = common dso_local global i32** null, align 8
@indent = common dso_local global i32 0, align 4
@tree = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.menu*, i8**)* @place_node to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @place_node(%struct.menu* %0, i8** %1) #0 {
  %3 = alloca %struct.menu*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.menu* %0, %struct.menu** %3, align 8
  store i8** %1, i8*** %4, align 8
  %7 = load i32**, i32*** @parents, align 8
  %8 = load i32, i32* @indent, align 4
  %9 = sub nsw i32 %8, 1
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds i32*, i32** %7, i64 %10
  %12 = load i32*, i32** %11, align 8
  store i32* %12, i32** %5, align 8
  %13 = load i32**, i32*** @parents, align 8
  %14 = load i32, i32* @indent, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i32*, i32** %13, i64 %15
  %17 = load i32*, i32** %16, align 8
  store i32* %17, i32** %6, align 8
  %18 = load i32, i32* @tree, align 4
  %19 = load i32*, i32** %6, align 8
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @gtk_tree_store_append(i32 %18, i32* %19, i32* %20)
  %22 = load i32*, i32** %6, align 8
  %23 = load %struct.menu*, %struct.menu** %3, align 8
  %24 = load i8**, i8*** %4, align 8
  %25 = call i32 @set_node(i32* %22, %struct.menu* %23, i8** %24)
  ret void
}

declare dso_local i32 @gtk_tree_store_append(i32, i32*, i32*) #1

declare dso_local i32 @set_node(i32*, %struct.menu*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
